--- a/website/assets/sass/helpers.sass
+++ b/website/assets/sass/helpers.sass
@@ -1,3 +1,5 @@
+$dashboard-top-margin: 1.25rem // Margin between sticky navbar and docs dashboard
+
 // Debug element sizes
 =x
   border: 1.5px solid red
@@ -8,12 +10,19 @@
   flex-direction: row
   justify-content: space-between
 
+// Vertically align all items in a row
 =y-centered-row
   align-items: center
 
-// Transitions (docs sidebar fade in/out)
-.transition
-  &.enter
-    transition: all 4s ease-in
-  &.leave
-    transision: all 4s ease-out
+.is-sticky
+  position: sticky
+  position: -webkit-sticky
+  top: $navbar-height + $dashboard-top-margin
+
+.dashboard
+  margin-top: $dashboard-top-margin
+
+/// AlpineJS helpers
+// Hides an element if x-cloak is set
+[x-cloak]
+  display: none !important
